# Dictee

./: .gitignore  README.md  fr.benjaminbellamy.dictee.yml  meson.build
data/: fr.benjaminbellamy.dictee.desktop  fr.benjaminbellamy.dictee.metainfo.xml  meson.build
src/: main.vala  meson.build  normalize.vala  recorder.vala  window.vala
