# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Benjamin Bellamy <bbellamy@linagora.com>

install_data(
  'fr.benjaminbellamy.dictee.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'fr.benjaminbellamy.dictee.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons/hicolor/scalable/apps/fr.benjaminbellamy.dictee.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps',
)
